Fixes channel alignment and rename top content to my edition
Former-commit-id: 2c61453d6dfaf0ba13dbe4c582a45d796a58352f [formerly b6b0b053a0649d1bda8530c3b259bcd9edbd1db1 [formerly 4882877ef38b26e0f3c6c7900722fede81ba25ae]]
Former-commit-id: e600deb8f2633aea87808af54c94fd2aec372b5d
Former-commit-id: 0fb1613157cf46ed3f6053e0724d022e439addff

--- a/stylesheets/ui.scss
+++ b/stylesheets/ui.scss
@@ -515,12 +515,13 @@ ul.channels {
   -webkit-overflow-scrolling:touch;
   
   padding-top: 120;
-  left: 20px;
+  left: 240px;
   top: 0;
   border-top: 200px;
   position: absolute;
   bottom: 0;
   padding-bottom: 50%;
+  
   
   li {
     position: relative;
@@ -538,10 +539,7 @@ ul.channels {
     margin-bottom: 20px;
     background-color: rgba(0,0,0, 0.5);
     background-size: cover;
-
   }
-  
-  
 
   .action {
     font-family: "Georgia";
